--- a/style.css
+++ b/style.css
@@ -1,269 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    font-family: 'Poppins', sans-serif;
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Poppings';
+text-decoration: none;
+scroll-behavior: smooth;
+list-style: none;
 }
 
-html{
-    font-size: 62.5%;
-}
 
-body{
-    width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
-    background-color: black;
-    color: white;
-}
+/*Menu Superior*/
+
 
 header{
-    margin-top: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 1rem 9%;
-    background-color: transparent;
-    filter: drop-shadow(10px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+	position: fixed;
+	top: 1rem;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 5rem;
+	background-color: rgba(0, 0, 0, 0.8);
+	backdrop-filter: blur(8px);
+	color: white;
+	padding: 0.5rem 1.5rem;
+	border-radius: 3rem;
+	z-index: 1000;
 }
-
 .logo{
-    font-size: 3rem;
-    color: #b74b4b;
-    font-weight: 800;
-    cursor: pointer;
-    transition: 0.5s ease;
+	color: white;
+	font-size: 1.3 rem;
+	font-weight: 600;
+	text-wrap: nowrap;
+	transition: 0.3s ease-in-out;
+}
+.logo:houver{
+	transform: scale(1.1);
+}
+.nav-links{
+	display: flex;
+	gap: 2rem;
+}
+li a{
+	position: relative;
+	color: white;
+	font-weight: 300;
+}
+li a::before{
+	position: absolute;
+	content: '';
+	width: 0;
+	left: 0;
+	height: 5px;
+	top: 25px;
+	border-radius: 1rem;
+	transition: 0.3s ease-in-out;
+	background: linear-gradient(to right, rgb(0, 157, 255), rgb(255, 0, 255));
+}
+li a:hover::before{
+	width: 100%;
+}
+.visit-btn{
+	padding: 0.8rem 1.5rem; 
+	border-radius: 3rem;
+	border: none;
+	font-weight: 500;
+	font-size: 1rem;
+	color: white;
+	cursor: pointer;
+	text-wrap: nowrap;
+	transition: 0.3s ease-in-out;
+	background: linear-gradient(to right, rgb(0, 157, 255), rgb(255, 0, 255));	
 }
 
-.logo:hover{
-    transform: scale(1.1);
+.visit-btn:hover{
+	background: linear-gradient(to right, rgb(255, 0, 255), rgb(0, 157, 255));
+	transform: scale(1.03);
+}
+#menu-icon{
+	font-size: 2rem;
+	display: none;
 }
 
-nav a{
-    font-size: 1.8rem;
-    color: white;
-    margin-left: 4rem;
-    font-weight: 500;
-    transition: 0.3s ease;
-    border-bottom: 3px solid transparent;
+
+/*Secções sobre mim*/ 
+
+
+.info-box h3{
+	font-size: 1.8rem;
+	font-weight: 500;
+	opacity: 0.8;
 }
-
-nav a:hover,
-nav a.active{
-    color: #b74b4b;
-    border-bottom: 3px solid #b74b4b;
+.info-box h1{
+	font-size: 4rem;
+	font-weight: 600;
 }
-
-@media(max-width:995px){
-    nav{
-        position: absolute;
-        display: none;
-        top: 0;
-        right: 0;
-        width: 40%;
-        border-left: 3px solid #b74b4b;
-        border-bottom: 3px solid #b74b4b;
-        border-bottom-left-radius: 2rem;
-        padding: 1rem solid;
-        background-color: #161616;
-        border-top: 0.1rem solid rgba(0,0,0,0.1);
-    }
-
-    nav.active{
-        display: block;
-    }
-
-    nav a{
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-    }
-
-    nav a:hover,
-    nav a.active{
-        padding: 1rem;
-        border-radius: 0.5rem;
-        border-bottom: 0.5rem solid #b74b4b;
-    }
+.info-box span{
+	background: linear-gradient(to right, rgb(255, 0, 255), rgb(0, 157, 255));
+	background-clip: text;
+	color: transparent;
+	font-size: 2rem;
 }
-
-section{
-    min-height: 100vh;
-    padding: 5rem 9% 5rem;
+;btn-group{
+	display: flex;
+	gap: 1rem;
 }
-
-.home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8rem;
-    background-color: black;
-}
-
-.home .home-content h1{
-    font-size: 6rem;
-    font-weight: 700;
-    line-height: 1.3;
-}
-
-span{
-    color: #b74b4b;
-}
-
-.home-content h3{
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    font-weight: 700;
-}
-
-.home-content p{
-    font-size: 1.6rem;
-}
-
-.home-img{
-    border-radius: 50%;
-}
-
-.home-img img{
-    position: relative;
-    width: 32vw;
-    border-radius: 50%;
-    box-shadow: 0 0 25px solid #b74b4b;
-    cursor: pointer;
-    transition: 0.2s linear;
-}
-
-.home-img img:hover{
-    font-size: 1.8rem;
-    font-weight: 500;
-}
-
-.social-icons a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background-color: transparent;
-    border: 0.2rem solid #b74b4b;
-    font-size: 2rem;
-    border-radius: 50%;
-    margin: 3rem 1.5rem 3rem 0;
-    transition: 0.3s ease;
-    color: #b74b4b;
-}
-
-.social-icons a:hover{
-    color: black;
-    transform: scale(1.3) translateY(-5px);
-    background-color: #b74b4b;
-    box-shadow: 0  0 25px #b74b4b;
-}
-
 .btn{
-    display: inline-block;
-    padding: 1rem 2.8rem;
-    background-color: black;
-    border-radius: 4rem;
-    font-size: 1.6rem;
-    color: #b74b4b;
-    letter-spacing: 0.3rem;
-    font-weight: 600;
-    border: 2px solid #b74b4b;
-    transition: 0.3s ease;
-    cursor: pointer;
+	border-radius: 3rem;
+	padding: 0.5rem 1.5rem;
+	border: 2px solid black;
+	cursor: pointer;
+	font-weight: 500;
+	text-wrap: nowrap;
+	transition: 0.2s ease-in-out;
 }
-
 .btn:hover{
-    transform: scale3d(1.03);
-    background-color: #b74b4b;
-    color: black;
-    box-shadow: 0 0 25px #b74b4b;
+	background-color: black;
+	color: white;
+}
+.socials{
+	display:flex;
+	gap: 2rem;
+}
+.socials i{
+	font-size: 2.5rem;
+	cursor: pointer;
+	transition: 0.2s ease-in-out;
+}
+.socials i:hover{
+	transform: scale(1.1);
 }
 
-.typing-text{
-    font-size: 34px;
-    font-weight: 600;
-    min-width: 280px;
-}
+/*Secções sobre Experiências*/
 
-.typing-text span{
-    position: relative;
-}
-
-.typing-text span::before{
-    content: "software Developer";
-    color: #b74b4b;
-    animation: words 20s infinite;
-}
-
-.typing-text span::after{
-    content: "";
-    background-color: black;
-    position: absolute;
-    width: calc(100% + 8px);
-    height: 100%;
-    border-left: 3px solid black;
-    right: -8;
-    animation: cursor 0.6s infinite;
-}
-
-@keyframes cursor{
-    to{
-        border-left: 3px solid #b74b4b;
-    }
-}
-
-@keyframes words{
-    0%, 20%{
-        content: "Desenvolvedor Web";
-    }
-    21%, 40%{
-        content: "Desenvolvedor";
-    }
-    41%, 60%{
-        content: "Professor";
-    }
-    61%, 80%{
-        content: "Estudante";
-    }
-    81%, 100%{
-        content: "Funcionário Público";
-    }
-}
-
-@media (max-width: 1000px){
-    .home{
-        gap: 4rem;
-    }
-}
-
-@media(max-width:995px){
-    .home{
-        flex-direction: column;
-        margin: 5rem 4rem;
-    }
-
-    .home .home-content h3{
-        font-size: 2.5rem;
-    }
-
-    .home-content h1{
-        font-size: 5rem;
-    }
-
-    .home-img img{
-        width: 70vw;
-        margin-top: 4rem;
-    }
-}
