--- a/style.css
+++ b/style.css
@@ -162,3 +162,60 @@ section{
 
 /*Secções sobre Experiências*/
 
+.section-title{
+	text-align: center;
+	font-size: 4rem;
+	font-weight: 600;
+	margin-bottom: 3rem;
+}
+.experience-info{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 5rem;
+}
+experiente img{
+	width: 24vw;
+	border-radius: 3rem;
+}
+.grip {
+	display: grid;
+	grip-template-columns: repeat(2,1fr);
+	gap: 2rem;
+}
+.grip-card{
+	border: 2px solid black;
+	border-radius: 3rem;
+	padding: 3rem;
+	display: flex;
+	flex-direction: column;
+	align-items: baseline;
+	justify-content: left;
+	cursor: pointer;
+	transition: 0.2s ease-in-out;
+}
+.grid-card:hover{
+	transform: scale(1.02);
+	background-color: black;
+	color: white;
+}
+.grip-card i{
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+.grip-card span{
+	font-size: 1.5rem;
+	font-weight: 500;
+	background: linear-gradient(to right, #009dff, #ff00ff);
+	background-clip: text;
+	color: transparent;
+}
+::-webkit-scrollbar{
+	width: 20px;
+}
+::-webkit-scrollbar-track{
+	background-color: rgb(219, 219, 219);	
+}
+::-webkit-scrollbar-thumb{
+	background: linear-gradient(to bottom, #009dff, #ff00ff);
+}
