--- a/style.css
+++ b/style.css
@@ -219,7 +219,10 @@ experiente img{
 ::-webkit-scrollbar-thumb{
 	background: linear-gradient(to bottom, #009dff, #ff00ff);
 }
+
+
 /*Secções sobre Projetos*/
+
 
 .project-grip{
 	display: grid;
@@ -256,4 +259,32 @@ experiente img{
 .project-card h3{
 	font-size: 2rem;
 	font-weight: 500;
+}
+
+
+/*Secções sobre Contato e roda-pé*/
+
+footer{
+	bottom: 0;
+	left: 0;
+	height: 10rem;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: center;
+	justify-content: center;
+}
+footer ul{ 
+	display: flex;
+	align-item: center;
+	gap: 3rem;
+}
+footer ul li a{
+	color: black;
+	font-weight: 600;
+}
+.copyright{
+	font-size: 300;
+	margin-top: 2rem;
 }
