--- a/style.css
+++ b/style.css
@@ -288,3 +288,20 @@ footer ul li a{
 	font-size: 300;
 	margin-top: 2rem;
 }
+
+/*Secções sobre responsividade para mobile*/
+@media(max-width:1280px){
+	header{
+		padding: 1rem 2rem;
+		gap: 2rem;
+	}
+	.about .about-container{
+		
+	}
+}
+@media(max-width:768px){
+	
+}
+@media(max-width:600px){
+	
+}
